--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
             @RenderBody()
         </main>
     </div>
-
+    <partial name="_modalview" />
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - ServiceMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
