--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ServiceMVC.Models.Cliente>
+﻿@model ReflectionIT.Mvc.Paging.PagingList<ServiceMVC.Models.Cliente>
 
 @{
     ViewData["Title"] = "Clientes";
@@ -6,86 +6,110 @@
 
 <h1>Clientes</h1>
 
-<p>
-    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","Clientes")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
-    <a asp-action="IndexAll">Ver Todos</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Domicilio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TelCel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TelFijo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Comentario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Apellido)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Domicilio)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TelCel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TelFijo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Comentario)
-                </td>
-                <td>
-                    @{
-                        if (item.Status)
-                        {
-                            <i class="bi-check-square-fill text-primary"></i>
-                        }
-                        else
-                        {
-                            <i class="bi-square-fill text-danger"></i>
-                        }
-                    }
-                    @*<span class="bg-info">@Html.DisplayFor(modelItem => item.Status)</span>*@
-                </td>
-                <td>
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="d-flex justify-content-between align-items-center">
+    <p>
+        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","Clientes")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
+        <a asp-action="IndexAll" class="btn btn-outline-primary">Ver Todos</a>
+    </p>
 
-<partial name="_modalview" />
+        <form method="get" class="form-inline">
+            <input name="filter" class="form-control" placeholder="Buscar"
+                   value="@Model.RouteValue["Filter"]" />
+            <button type="submit" class="btn btn-primary">
+                <span class="bi-search" aria-hidden="true"></span> Buscar
+            </button>
+        </form>
+    </div>
+
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.SortableHeaderFor(model => model.Nombre, "Nombre")
+                </th>
+                <th>
+                    @Html.SortableHeaderFor(model => model.Apellido, "Apellido")
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Domicilio)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TelCel)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TelFijo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Comentario)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Apellido)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Domicilio)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TelCel)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TelFijo)
+                    </td>
+                    <td>
+                        @{
+                            if (item.Comentario != null)
+                            {
+                                <a href="#modalPersnalizado" data-id='@Url.ActionLink("Comentario","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado">Ver Comentario</a>
+                            }
+                            else
+                            {
+                                <span>Sin Comentario</span>
+                            }
+                        }
+                    </td>
+                    <td>
+                        @{
+                            if (item.Status)
+                            {
+                                <i class="bi-check-square-fill text-primary"></i>
+                            }
+                            else
+                            {
+                                <i class="bi-square-fill text-danger"></i>
+                            }
+                        }
+                    </td>
+                    <td>
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","Clientes")/@item.ClienteID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <nav aria-label="Paginador">
+        <vc:pager paging-list="@Model" />
+    </nav>
+
+    <partial name="_modalview" />
