--- a/Views/Servicios/Edit.cshtml
+++ b/Views/Servicios/Edit.cshtml
@@ -10,13 +10,13 @@
 <h4>Servicio</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ServicioID" />
             <div class="form-group">
-                <label asp-for="EquipoID" class="control-label"></label>
-                <input asp-for="EquipoID" class="form-control" />
+                <label asp-for="EquipoID" class="control-label">Equipo</label>
+                <select asp-for="EquipoID" class="form-control" asp-items="ViewBag.EquipoID"></select>
                 <span asp-validation-for="EquipoID" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,6 +43,11 @@
                 <label asp-for="Total" class="control-label"></label>
                 <input asp-for="Total" class="form-control" />
                 <span asp-validation-for="Total" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Comentarios" class="control-label"></label>
+                <input asp-for="Comentarios" class="form-control" />
+                <span asp-validation-for="Comentarios" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
