--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ServiceMVC
 @using ServiceMVC.Models
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
