Alta de Servicio Completada, ranking de Usuarios Completado

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReflectionIT.Mvc.Paging.PagingList<ServiceMVC.Models.Cliente>
+﻿@model PagingList<ServiceMVC.Models.Cliente>
 
 @{
     ViewData["Title"] = "Clientes";
