--- a/Views/Home/Pruebas.cshtml
+++ b/Views/Home/Pruebas.cshtml
@@ -13,11 +13,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ClienteID" class="control-label">Cliente</label>
-                <select asp-for="ClienteID" class="form-control" asp-items="ViewBag.ClienteID"></select>
+                <select asp-for="ClienteID" class="form-control cmborigen" asp-items="ViewBag.ClienteID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="EquipoID" class="control-label">Equipos</label>
-                <select asp-for="EquipoID" class="form-control" asp-items="ViewBag.EquipoID"></select>
+                <select asp-for="EquipoID" class="form-control cmbdestino" asp-items="ViewBag.EquipoID"></select>
             </div>
             <div class="form-group">
                 <input form="Agregar" type="submit" value="Agregar" class="btn btn-primary" />
