--- a/Views/ProbDiagSoles/CompletarAltaServicio.cshtml
+++ b/Views/ProbDiagSoles/CompletarAltaServicio.cshtml
@@ -100,26 +100,41 @@
 </table>
 
 <div>
-    <a asp-action="Index" asp-controller="Servicios" class="btn btn-outline-primary">@ViewBag.Title</a>
+    <a asp-action="Index" asp-controller="Servicios" class="btn btn-outline-primary">Volver a Mis Servicios</a>  <a href="@Url.ActionLink("CompletarAltaServicio","ProbDiagSoles")/@ViewBag.Servicio.ServicioID" class="btn btn-outline-warning">Abandonar Servicio</a>
     @if (ViewBag.TotalProbs != 0)
     {
         if (ViewBag.TotalDiags >= ViewBag.TotalProbs && ViewBag.TotalSoles >= ViewBag.TotalDiags)
         {
-            <a asp-action="Index" asp-controller="Servicios" class="btn btn-outline-success">Cerrar Caso Completado</a>
+            <br />
+            <form asp-action="FinalizarServicio" asp-controller="Servicios" method="post">
+                <input type="hidden" id="id" value="@ViewBag.Servicio.ServicioID" />
+                <input type="hidden" id="solucionado" value="true" />
+                <div class="form-group">
+                    <input type="submit" value="Finalizar Servicio" class="btn btn-outline-success" />
+                </div>
+            </form>
         }
         else
         {
-            if (ViewBag.TotalSoles >= ViewBag.TotalDiags)
+            if (ViewBag.TotalSoles <= ViewBag.TotalDiags)
             {
-              <a asp-action="Index" asp-controller="Servicios" class="btn btn-outline-warning">Cerrar Caso Incompleto</a>
+                <br />
+                <form asp-action="FinalizarServicio" asp-controller="Servicios" method="post">
+                    <input type="hidden" id="id" value="@ViewBag.Servicio.ServicioID" />
+                    <input type="hidden" id="solucionado" value="false" />
+                    <div class="form-group">
+                        <input type="submit" value="Cerrar Servicio Incompleto" class="btn btn-outline-warning" />
+                    </div>
+                </form>
             }
         }
 
     }
 </div>
 
-<partial name="_modalview" />
+@*<partial name="_modalview" />*@
 
 @section Scripts {
+    @*<script src="~/js/ProbxDiagCMB.js"></script>*@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
