--- a/Views/RankingUsuarios/Index.cshtml
+++ b/Views/RankingUsuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ServiceMVC.Models.RankingUsuario>
+﻿@model PagingList<ServiceMVC.Models.RankingUsuario>
 
 @{
     ViewData["Title"] = "Ranking Usuarios";
@@ -6,51 +6,67 @@
 
 <h1>Ranking Usuarios</h1>
 
-<p>
-    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EnProceso)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Solucionados)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fallados)
-            </th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Usuario.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EnProceso)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Solucionados)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Fallados)
-                </td>
-                <td>
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
-                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="d-flex justify-content-between align-items-center">
+    <p>
+        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
+    </p>
 
-<partial name="_modalview" />
+
+    <form method="get" class="form-inline">
+        <input name="filter" class="form-control" placeholder="Buscar"
+               value="@Model.RouteValue["Filter"]" />
+        <button type="submit" class="btn btn-primary">
+            <span class="bi-search" aria-hidden="true"></span> Buscar
+        </button>
+    </form>
+</div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.SortableHeaderFor(model => model.Usuario, "Usuario")
+                </th>
+                <th>
+                    @Html.SortableHeaderFor(model => model.EnProceso, "EnProceso")
+                </th>
+                <th>
+                    @Html.SortableHeaderFor(model => model.Solucionados, "Solucionados")
+                </th>
+                <th>
+                    @Html.SortableHeaderFor(model => model.Fallados, "Fallados")
+                </th>
+                @*<th>Acciones</th>*@
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Usuario.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EnProceso)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Solucionados)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Fallados)
+                    </td>
+                    @*<td>
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                    </td>*@
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <nav aria-label="Paginador">
+        <vc:pager paging-list="@Model" />
+    </nav>
+
+    <partial name="_modalview" />
