--- a/Views/ServxUsuarios/Index.cshtml
+++ b/Views/ServxUsuarios/Index.cshtml
@@ -8,6 +8,11 @@
 
 <p>
     <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","ServxUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
+    @if (ViewBag.servdisp > 0)
+    {
+        @*<a href="#modalPersnalizado" data-id='@Url.ActionLink("AvaiableServices","ServxUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"> Servicios Disponibles</a>*@
+        <a asp-action="AvaiableServices" asp-controller="ServxUsuarios" class="btnLoadModal btn btn-outline-primary">Servicios Disponibles</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -61,7 +66,7 @@
                     }
                     else
                     {
-                      <a href="@Url.ActionLink("GoService","ServxUsuarios")/@item.ServcUsuarioID" class="btn btn-sm btn-success">Ir al Servicio</a>
+                      <a href="@Url.ActionLink("CompletarAltaServicio","ProbDiagSoles")/@item.ServicioID" class="btn btn-sm btn-success">Ir al Servicio</a>
                     }
                     |
                     <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","ServxUsuarios")/@item.ServcUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
