Detalles para la Presentacion Final

--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ServiceMVC.Areas.Identity
 @using ServiceMVC.Areas.Identity.Pages
+@using ServiceMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
