--- a/Views/RankingUsuarios/Index.cshtml
+++ b/Views/RankingUsuarios/Index.cshtml
@@ -8,9 +8,8 @@
 
 <div class="d-flex justify-content-between align-items-center">
     <p>
-        <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
+        @*<a aria-hidden="true" href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>*@
     </p>
-
 
     <form method="get" class="form-inline">
         <input name="filter" class="form-control" placeholder="Buscar"
@@ -20,7 +19,7 @@
         </button>
     </form>
 </div>
-
+<br />
     <table class="table">
         <thead>
             <tr>
