--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Usa una cuenta local para ingresar.</h4>
+                @*<h4>Usa una cuenta local para ingresar.</h4>*@
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -34,7 +34,7 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Ingresar</button>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Olvidaste tu contraseña?</a>
                     </p>
@@ -44,11 +44,11 @@
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">reenviar correo de confirmacion</a>
                     </p>
-                </div>
+                </div>*@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Usar otro servicio para registrarse.</h4>
             <hr />
@@ -77,7 +77,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
