--- a/Views/ProbDiagSoles/AgregarProb.cshtml
+++ b/Views/ProbDiagSoles/AgregarProb.cshtml
@@ -13,7 +13,7 @@
             <input type="hidden" asp-for="ServicioID" value="@ViewBag.ServicioID" />
             <div class="form-group">
                 <label for="Descripcion" class="control-label">Descripcion</label>
-                <input type="text" form="AgregarProb" id="Descripcion" name="Descripcion" class="form-control" />
+                <input type="text" form="AgregarProb" id="Descripcion" name="Descripcion" class="form-control autocomplete" data-id="@Url.ActionLink("ProblemaChange","ProbdiagSoles")"/>
             </div>
             <div class="form-group">
                 <input  form="AgregarProb" type="submit" value="Agregar" class="btn btn-primary" />
