--- a/Views/ProbDiagSoles/AgregarSol.cshtml
+++ b/Views/ProbDiagSoles/AgregarSol.cshtml
@@ -9,10 +9,9 @@
 }
 <h4>Agregar Problema</h4>
 <hr />
-
-<p>Si el Diagnostico no existe agrega uno nuevo</p>
 <div class="row">
     <div class="col-md-4">
+        <p>Si el Diagnostico no existe agrega uno nuevo</p>
         <form id="AgregarSol" asp-action="AgregarSol" asp-controller="ProbDiagSoles" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ServicioID" value="@ViewBag.ServicioID" />
@@ -33,12 +32,12 @@
             </div>
         </form>
     </div>
-</div>
+    <div class="w-100 d-none d-lg-block"></div>
 
-<hr />
-<p>O elige uno existente</p>
-<div class="row">
-    <div class="col-md-4">
+    <hr />
+    <div class="col-md-4 col-md-offset-2">
+        <p>O elige uno existente</p>
+
         <form id="Agregar" asp-action="VincularSol" asp-controller="ProbDiagSoles" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ServicioID" value="@ViewBag.ServicioID" />
@@ -60,4 +59,3 @@
         </form>
     </div>
 </div>
-
