--- a/Views/RankingClientess/Index.cshtml
+++ b/Views/RankingClientess/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ServiceMVC.Models.RankingClientes>
+﻿@model PagingList<ServiceMVC.Models.RankingClientes>
 
 @{
     ViewData["Title"] = "Ranking Clientes";
@@ -6,19 +6,29 @@
 
 <h1>Ranking Clientes</h1>
 
-<p>
-    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingClientess")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
-</p>
+<div class="d-flex justify-content-between align-items-center">
+    <p>
+        @*<a aria-hidden="true" href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingClientes")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>*@
+    </p>
+
+    <form method="get" class="form-inline">
+        <input name="filter" class="form-control" placeholder="Buscar"
+               value="@Model.RouteValue["Filter"]" />
+        <button type="submit" class="btn btn-primary">
+            <span class="bi-search" aria-hidden="true"></span> Buscar
+        </button>
+    </form>
+</div>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Cliente)
+                @Html.SortableHeaderFor(model => model.Cliente, "ApellidoNombre")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TotalServicios)
+                @Html.SortableHeaderFor(model => model.TotalServicios, "TotalServicios")
             </th>
-            <th>Acciones</th>
+            @*<th>Acciones</th>*@
         </tr>
     </thead>
     <tbody>
@@ -31,11 +41,11 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.TotalServicios)
                 </td>
-                <td>
+                @*<td>
                     <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","RankingClientess")/@item.RankingClientesID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
                     <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","RankingClientess")/@item.RankingClientesID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
                     <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","RankingClientess")/@item.RankingClientesID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
-                </td>
+                </td>*@
             </tr>
         }
     </tbody>
