--- a/Views/RoleManager/Index.cshtml
+++ b/Views/RoleManager/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Administrador de Roles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Administrador de Rolesr</h1>
+<h1>Administrador de Roles</h1>
 <form method="post" asp-action="AddRole" asp-controller="RoleManager">
     <div class="input-group">
         <input name="roleName" class="form-control w-25">
